Fixed the bug where the download resume button was not showing properly

--- a/frontend/src/components/about/About.css
+++ b/frontend/src/components/about/About.css
@@ -36,6 +36,9 @@
     
     .about-me-section-2 {
         align-self: center;
-        
+        img {
+            height: 20px;
+            width: 20px;
+        }
     }
 }
